--- a/site/anabioz/css/style.css
+++ b/site/anabioz/css/style.css
@@ -59,10 +59,12 @@ b {
 .inner {
 	display: inline-block;
 	vertical-align: top;
-	width: 500px;
+	width: 400px;
+	margin: 0 30px 0 0;
 }
 .wrap h1{
 	margin: 0 0 20px 0;
+	font-size: 24px;
 }
 .names {
 	margin: 20px 0 0 0;
@@ -104,4 +106,18 @@ b {
 .single-freeze td {
     border: 1px solid #aaaaaa;
     padding: 4px 12px;
+}
+.wrap-line {
+	margin: 0 0 10px;
+	height: 22px;
+}
+.wrap-line > input {
+	width: 180px;
+}
+.wrap-line > input,  .wrap-line > label{
+    float: left;
+}
+
+.all-freezes, .all-freezes-sex {
+    float: right;
 }
