--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -53,7 +53,7 @@ a, a:visited{
     left: 0;
     top: 40px;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: #f1f1f1;
 }
 
@@ -112,4 +112,14 @@ a, a:visited{
     display: inline-block;
     text-align: center;
     width: 50%;
+}
+
+
+.techgame {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fff;
+    width: 100%;
+    display: none;
 }
