--- a/site/static/css/style.css
+++ b/site/static/css/style.css
@@ -77,8 +77,7 @@ a, a:visited{
 .systemOpener , .systemOpener:visited{
     border: 1px solid;
     display: inline-block;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding: 20px 5px;
     text-align: center;
     vertical-align: middle;
     width: 100px;
