v.1.2a anabioz module refined - aaded new names

--- a/site/static/anabioz/css/style.css
+++ b/site/static/anabioz/css/style.css
@@ -35,9 +35,11 @@
     padding: 4px 12px;
 }
 #anabioz .single-freeze {
-	display: inline-block;
-	width: 400px;
-	vertical-align: top;
+    display: inline-block;
+    height: 300px;
+    overflow-y: scroll;
+    vertical-align: top;
+    width: 400px;
 }
 #anabioz .single-freeze table {
 	width: 100%;
